# CTHeadDeformation

./: .coverage  LICENSE.md  README.md  dev_requirements.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
CTHeadDeformation.egg-info/: PKG-INFO
DeformHeadCT/: DataPreparation.py  DeformVolume.ipynb  DeformVolume.py  DeformVolumeOld.py  VolumeInfo.py  __init__.py  deformation.py  utils.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  python_docs.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docsrc/: conf.py  python_docs.rst
examples/: DemonstrateHeadDeformation.py  Elastix_BSpline_OpenCL_RigidPenalty.txt  GTVShift.json  OneAxisRotation.json  OneAxisRotationAndGTVShift.json  TwoAxisRotation.json  readme.md
examples/PhantomDicomData/: CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001047.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001048.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001056.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001062.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001067.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001069.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001073.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001075.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001076.dcm  CT.1.3.12.2.1107.5.1.4.95502.30000022092600392886700001078.dcm  (+78 more)
examples/PhantomDicomData/struct/: rtstructNew.dcm
tests/: OneAxisRotation.json  TestCTDeformationCode.py  test_CTHeadDeformation.py
(+121 files in other folders)
