[metadata]
name = CTHeadDeformation
version = attr: DeformHeadCT.__version__
author = Mark Gardner
author_email = mark.gardner@sydney.edu.au
description =Perform Realistic Head Deformations
long_description = file: README.md
license_files = MIT
long_description_content_type = text/markdown
url = https://github.sydney.edu.au/Image-X/CTHeadDeformation
project_urls =
    Bug Tracker = https://github.sydney.edu.au/Image-X/CTHeadDeformation/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = DeformHeadCT
python_requires = >=3.6
install_requires =
    numpy >= 1.6.0
    matplotlib >= 3.5.0
    SimpleITK
    platipy

